--- a/SportsStore.WebUI/Web.config
+++ b/SportsStore.WebUI/Web.config
@@ -5,6 +5,10 @@
   -->
 
 <configuration>
+  <connectionStrings>
+    <add name="EFDbContext" connectionString="Data Source=(localdb)\Projects\V12;Initial Catalog=SportsStore;Integrated Security=True;ProviderName=System.Data.SqlClient"/>
+  </connectionStrings>
+  
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
