--- a/SportsStore.WebUI/Web.config
+++ b/SportsStore.WebUI/Web.config
@@ -35,6 +35,13 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="2880">
+        <credentials passwordFormat="Clear">
+          <user name="admin" password="secret"/>
+        </credentials>
+      </forms>
+    </authentication>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
